fixed the stupid orange title from overflowwing the viewbox on mobile

--- a/src/app/site/mr/mr.component.css
+++ b/src/app/site/mr/mr.component.css
@@ -6,7 +6,6 @@
     margin: 10px 10%;
     margin-bottom: 0;
     justify-content: flex-start;
-    width: 100%;
     font-weight: 700;
     background-color:#242927;
     color:#e69138;
